--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <th>Employee Name</th>
         <th>Current Status</th>
         <th>Major</th>
+        <th>{{fullDate}}</th>
     </tr>
 </span>
 <script src="app/bower_components/angular/angular.min.js"></script>
